--- a/css/style.css
+++ b/css/style.css
@@ -1,54 +1,42 @@
-
-h3{
+h3 {
   text-align: center;
   text-decoration: underline;
-  color: black;
-}
+  color: black; }
 
-h3 a{
-  color: black;
-}
+h3 a {
+  color: black; }
 
-a, a:visited{
-  color: blue;
-}
+a, a:visited {
+  color: blue; }
 
 .table {
   border-collapse: collapse;
-  width: 100%
-}
+  width: 100%; }
 
-td, th{
+td, th {
   width: inherit;
   text-align: center;
   padding: 8px;
-  border-bottom: 1px solid #ddd;
-}
+  border-bottom: 1px solid #ddd; }
 
-.title_column{
-  text-align: left;
-}
+.title_column {
+  text-align: left; }
 
-tr:hover{
-  background-color: #ddd;
-}
+tr:hover {
+  background-color: #ddd; }
 
-.id_column, .title_column, .button_column, .answer_column{
-  width: 25%
-}
+.id_column, .title_column, .button_column, .answer_column {
+  width: 25%; }
 
-.button{
+.button, .button--state-hidden, .button--state-show {
   background-color: white;
   border-radius: 8px;
   padding: 6px 18px;
   text-align: center;
-  margin: 4px 2px;
-}
+  margin: 4px 2px; }
 
-.button--state-hidden{
-  color: red;
-}
+.button--state-hidden {
+  color: red; }
 
-.button--state-show{
-  color: black;
-}
+.button--state-show {
+  color: black; }
