--- a/_style.scss
+++ b/_style.scss
@@ -1,18 +1,16 @@
 
-h3{
+.tittle{
   text-align: center;
-  text-decoration: underline;
   color: black;
-}
-
-h3{
-  a{
-    color: black;
-  }
 }
 
 a, a:visited{
   color: blue;
+}
+
+.link_black{
+  color: black;
+  text-decoration: none;
 }
 
 .table {
@@ -31,7 +29,7 @@ td, th{
   text-align: left;
 }
 
-tr:hover{
+.tr_problem:hover{
   background-color: #ddd;
 }
 
@@ -55,4 +53,9 @@ tr:hover{
 .button--state-show{
   @extend .button;
   color: black;
+}
+
+.button--state-running{
+  @extend .button;
+  color: gold;
 }
