--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,29 +4,16 @@
   color: black;
 }
 
-a, a:visited{
-  color: blue;
-}
-
-.link_black{
-  color: black;
-  text-decoration: none;
-}
-
 .table {
   border-collapse: collapse;
   width: 100%
 }
 
-td, th{
+.td, .th{
   width: inherit;
   text-align: center;
   padding: 8px;
   border-bottom: 1px solid #ddd;
-}
-
-.title_column{
-  text-align: left;
 }
 
 .tr_problem:hover{
@@ -34,8 +21,21 @@ td, th{
 }
 
 .id_column, .title_column, .button_column, .answer_column{
+  @extend .td;
   width: 25%
 }
+
+.link_problem, .link_problem:visited{
+  text-decoration: none;
+  color: blue;
+  target: _blank;
+}
+
+.link_black{
+  color: black;
+  text-decoration: none;
+}
+
 
 .button{
   background-color: white;
