--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,10 +31,10 @@
 .link{
   text-decoration: none;
 
-  &--type-problem{
+  &--problem{
     color: #00f;
   }
-  &--type-black{
+  &--black{
     color: #000;
   }
 }
